--- a/Le-Cafe-Web/angular.json
+++ b/Le-Cafe-Web/angular.json
@@ -26,6 +26,7 @@
               "src/styles.css",
               "src/assets/bootstrap/bootstrap.min.css",
               "src/assets/font-awesome/css/font-awesome.min.css",
+              "src/assets/datepicker3.css",
               "src/assets/inspinia/style.scss"
             ],
             "scripts": [
@@ -41,6 +42,7 @@
               "src/assets/js/plugins/flot/jquery.flot.pie.js",
               "src/assets/js/plugins/peity/jquery.peity.min.js",
               "src/assets/js/plugins/pace/pace.min.js",
+              "src/assets/js/plugins/datapicker/bootstrap-datepicker.js",
               "src/assets/js/plugins/chartJs/Chart.min.js"
             ]
           },
