--- a/Le-Cafe-Web/package.json
+++ b/Le-Cafe-Web/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "^7.0.3",
     "@angular/router": "^7.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "angular4-datepicker": "^1.0.1",
     "core-js": "^2.5.4",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
