Se añade nuevo backend en c#

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,51 @@ Le-Cafe-REST/common/entities/target/
 Le-Cafe-REST/common/enums/target/
 
 *.class
+
+Le-Cafe-Api/.vs/
+
+Le-Cafe-Api/Commands/bin/
+
+Le-Cafe-Api/Commands/obj/
+
+Le-Cafe-Api/daoNHibernate/bin/
+
+Le-Cafe-Api/daoNHibernate/obj/
+
+Le-Cafe-Api/dtos/bin/
+
+Le-Cafe-Api/dtos/obj/
+
+Le-Cafe-Api/entities/bin/
+
+Le-Cafe-Api/entities/obj/
+
+Le-Cafe-Api/enums/bin/
+
+Le-Cafe-Api/enums/obj/
+
+Le-Cafe-Api/exceptions/bin/
+
+Le-Cafe-Api/exceptions/obj/
+
+Le-Cafe-Api/interfaces/bin/
+
+Le-Cafe-Api/interfaces/obj/
+
+Le-Cafe-Api/Le-Cafe-Api/bin/
+
+Le-Cafe-Api/Le-Cafe-Api/obj/
+
+Le-Cafe-Api/libraries/bin/
+
+Le-Cafe-Api/libraries/obj/
+
+Le-Cafe-Api/packages/
+
+Le-Cafe-Api/resources/bin/
+
+Le-Cafe-Api/resources/obj/
+
+Le-Cafe-Api/unit/bin/
+
+Le-Cafe-Api/unit/obj/
