--- a/Le-Cafe-REST/services/implementation/pom.xml
+++ b/Le-Cafe-REST/services/implementation/pom.xml
@@ -85,7 +85,7 @@
                 <version>3.2.0</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
-                    <warName>aidpass2</warName>
+                    <warName>lecafe</warName>
                     <!--<webResources>
                         <resource>
                             <directory>src/main/resources</directory>
